                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 25-09-2004 fixed: [ 1033093 ] Movie Plots which contain HTML tags from IMDB
  - 24-09-2004 fixed: [ 1001048 ] Return to Dashboard broke
  - 24-09-2004 fixed: Graphical glitch when scrolling in thumbs view and another dir is brought up
  - 24-09-2004 added: Album info + Year now shown on the LCD during music playback (based on SF 935576)
  - 24-09-2004 fixed: [ 1034040 ] Pressing x while calibrating screen causes blackscreen
  - 24-09-2004 fixed: Spin controls don't remember which arrow was focused
  - 24-09-2004 fixed: CDDA Player was using too much processor - added Sleep()
  - 24-09-2004 fixed: [ 973399 ] Vizualisations are not in sync with audio
  - 24-09-2004 fixed: [ 991442 ] .cda incorrect numbering
  - 24-09-2004 fixed: Picture info (current number of picture was out by 1)
  - 24-09-2004 fixed: [ 1023515 ] .GIF renamed to .JPEG crashes XBMC
  - 24-09-2004 changed: Polish language file (thanks to NaPeK)
  - 24-09-2004 changed: German (Austrian) language file
  - 24-09-2004 fixed: in thumbnail view the up arrow was not reachable
  - 23-09-2004 fixed: list item is not centerally aligned when TTF fonts enabled
  - 23-09-2004 fixed: song title text would overlap with the size/time when TTF fonts enabled
  - 23-09-2004 fixed: thumbnail text would overlap with other thumbnail texts when TTF fonts selected
  - 23-09-2004 fixed: slow scroll speed of RSS with TTF fonts
  - 23-09-2004 fixed: remote not working properly on main screen when TTF fonts selected
  - 23-09-2004 fixed: Crashes/Blackscreens in slideshow with large images.